# CO_OP

./: .env.example  .gitignore  .gitleaks.toml  .gitmodules  .pyre_configuration  CHANGELOG.md  CI_FIXES_COMPLETE.md  CONTRIBUTING.md  DEPENDABOT_PR_ANALYSIS.md  DEPENDABOT_PR_CLEANUP.md  DESKTOP_APP_QUICK_FIX.md  FINAL_COMPLETION_SUMMARY.md  GITHUB_CI_STATUS.md  GITHUB_CI_VERIFICATION.md  INSTALL_RUST_WINDOWS.md  MERGE_AND_RELEASE_COMPLETE.md  MERGE_INSTRUCTIONS.md  Makefile  PROJECT_STATUS_COMPREHENSIVE_ANALYSIS.md  PR_ANALYSIS.md  PR_DESCRIPTION.md  QUICK_START.md  README.md  RELEASE_NOTES.md  RUN_DESKTOP_APP.md  SECURITY_FIX_COMPLETE.md  SPEC_COMPLETION_SUMMARY.md  SPEC_COMPLETION_v1.0.4.md  SYSTEM_STATUS_REPORT.md  TEST_FAILURES.md  TEST_REPORT.md  TEST_REPORT_UTF8.md  install.ps1  install.sh  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  main.rs  notifications.rs  tray.rs
cli/: README.md  pyproject.toml
cli/coop/: main.py
cli/coop/commands/: __init__.py  approve.py  backup.py  doctor.py  gateway.py  onboard.py  test.py
cli/tests/: test_backup.py  test_cli.py  test_doctor.py  test_gateway.py
docs/: ACCESS_GUIDE.md  AI_SECURITY_IMPLEMENTATION_PLAN.md  ARCHITECTURE.md  CI_CD_SECURITY_SUMMARY.md  CI_CD_SETUP.md  CI_COVERAGE_ENFORCEMENT.md  CI_FIXES_APPLIED.md  CI_FIXES_COMPLETE.md  CI_FIXES_FINAL.md  CI_FIXES_FINAL_PRODUCTION_HARDENING.md  CI_SIMPLIFICATION.md  DATABASE.md  DEPLOYMENT.md  DIAGRAM_STYLE.md  ENV_VARIABLES_REFERENCE.md  FINAL_PRODUCTION_VALIDATION.md  FINAL_REVIEW.md  FINAL_SYSTEM_VALIDATION.md  FINAL_VERIFICATION_REPORT.md  INSTALL.md  INSTALLATION.md  PERFORMANCE.md  PERFORMANCE_BASELINE.md  PHASE_B_VALIDATION.md  PHASE_C_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READINESS_COMPLETE.md  PRODUCTION_VALIDATION_COMPLETE.md  PROJECT.md  PROJECT_STRUCTURE.md  SECRET_ROTATION_CHECKLIST.md  SECURITY.md  SECURITY_ARCHITECTURE.md  SECURITY_FIXES_v1.0.3.md  TESTING.md  TROUBLESHOOTING.md  (+1 more)
services/api/: .env.example  Dockerfile  README.md  entrypoint.sh  pyproject.toml  pyrightconfig.json  requirements.txt  supervisord.conf  test_results.txt  test_results_v1.txt  test_results_v1_utf8.txt  test_results_v2.txt  test_results_v2_utf8.txt  test_results_v3.txt  test_results_v3_utf8.txt  verify_db.py
services/api/.hypothesis/constants/: 0ba1e2ce6cbc7dbe  0eab2e37af19d823  1f2f9997094ac2a7  24b2d0fdec42a6a1  278514eb61264956  2df894bb847922a1  2f13c5fa233e6d28  3857c749b9e9c333  38df1e953cce7a93  41dfc8aedd9ca754  467e28d893020e04  480b7d914972e0f9  4aa5050169bbf80d  4bd3b931c65c51ba  4c7feb3f386161fc  4ea028ac2abb1cae  50d931a5dc17f434  51155233c3e1b510  551f117ff4bfb582  59852e8db138e28e  5cb4d644812d7b69  60a7a10a95cd1429  6224466b4f78d8ad  68e3eed24689a667  726afd5ffe046f27  7458f46298c1746a  77494e93bc4b0bca  787f913fd8b91eb4  86bfc0bc9ff1bdaa  87c294873439548a  899670f4b41a9c3e  8a77d0d86b690f06  8b33d2ca9772e855  97f6059dfb5720ca  a1529bed40762993  a59e57085ef1c628  c169dbb2d94c4544  c8d30c7987a5beaa  c91d146765dbf27e  cb5d49d35f887900  (+15 more)
services/api/alembic/: env.py
services/api/alembic/versions/: 14e1dfdf2a5b_add_tenant_id_to_conversations.py  5bf0a2ccf42c_initial_schema.py  8c6d18516e08_add_conversation_and_message.py
services/api/app/: config.py  dependencies.py  main.py  worker.py
services/api/app/agent/: client_communicator.py  finance_manager.py  graph.py  lead_scout.py  nodes.py  outreach_manager.py  project_tracker.py  proposal_writer.py  quality_reviewer.py  self_improvement.py  state.py
services/api/app/communication/: telegram.py
services/api/app/core/: embedder.py  hardware_detector.py  hitl.py  logging.py  minio_client.py  redis_client.py  security.py  simulation.py
services/api/app/crons/: __init__.py  morning_brief.py  system_monitor.py
services/api/app/db/: models.py  qdrant_client.py  repositories.py  session.py
services/api/app/events/: consumer.py
services/api/app/routers/: __init__.py  approvals.py  auth.py  chat.py  conversations.py  credits.py  documents.py  health.py  invoices.py  projects.py  search.py  settings.py
services/api/app/schemas/: approval.py  invoice.py  project.py
services/api/app/services/: bm25_encoder.py  chunker.py  indexer.py  parser.py  reranker.py  search.py  vector_search.py
services/api/scripts/: gold_path_test.py
services/api/tests/: conftest.py  test_agents.py  test_approvals.py  test_auth.py  test_auth_flow.py  test_chat.py  test_chat_streaming.py  test_consumer_enhanced.py  test_conversations.py  test_credits.py  test_credits_enhanced.py  test_documents_enhanced.py  test_gold_path.py  test_hardware_detector.py  test_health.py  test_indexer_enhanced.py  test_integration.py  test_invoices.py  test_lead_scout.py  test_minio_client.py  test_morning_brief.py  test_parser.py  test_projects.py  test_properties.py  test_rag_pipeline.py  test_repositories.py  test_search.py  test_settings.py  test_settings_enhanced.py  test_stage3_agents.py  test_system_monitor.py  test_system_monitor_enhanced.py  test_system_monitor_preservation.py  test_telegram_bot.py  test_upload.py  test_vector_search.py  test_worker.py  v1_test_utils.py
(+130 files in other folders)
