[project]
name = "coop-cli"
version = "0.1.0"
description = "Co-Op Autonomous Company OS CLI"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
coop = "coop.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
