[project]
name = "coop-cli"
version = "0.1.0"
description = "Co-Op Autonomous Company OS CLI"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
coop = "coop.main:app"

[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["coop*"]
exclude = ["tests*", "backups*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Phase 2 (Task 7): CLI coverage enhanced with comprehensive tests
# Current coverage: 45% (gateway: 92%, backup: 39%, doctor: 33%)
# Target: 75% coverage (see .kiro/specs/seo-documentation-test-coverage)
# Note: Some commands require integration testing which is deferred
addopts = "--cov=coop --cov-report=html --cov-report=term --cov-fail-under=45"
