[package]
name = "co-op-desktop"
version = "0.1.0"
description = "Co-Op Autonomous Company OS"
authors = ["Co-Op Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-notification = "2.0.0"
tauri-plugin-autostart = "2.0.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
